@@ -65,16 +65,16 @@ int jmi_linear_solver_init_sparse_matrices(jmi_block_solver_t* block);
 int jmi_linear_completed_integrator_step(jmi_block_solver_t* block);
 
 /** \brief Computes C (dense) = -A (sparse)*B (sparse) */
-int jmi_linear_solver_sparse_multiply(const jmi_matrix_sparse_csc_t *A, const jmi_matrix_sparse_csc_t *B, double *C);
+/* int jmi_linear_solver_sparse_multiply(const jmi_matrix_sparse_csc_t *A, const jmi_matrix_sparse_csc_t *B, double *C); */
 
 /** \brief Computes C(:,col) (dense) = -A (sparse)*B(:,col) (sparse) */
-int jmi_linear_solver_sparse_multiply_column(const jmi_matrix_sparse_csc_t *A, const jmi_matrix_sparse_csc_t *B, jmi_int_t B_col, double *C);
+int jmi_linear_solver_sparse_multiply_column(const jmi_matrix_sparse_csc_t *A, const jmi_matrix_sparse_csc_t *B, jmi_int_t* nz_pattern, jmi_int_t nz_size, jmi_int_t B_col, double *C);
 
 /** \brief Computes C (dense) += A (sparse) */
 int jmi_linear_solver_sparse_add_inplace(const jmi_matrix_sparse_csc_t *A, double *C);
 
 /** \brief Solves L (sparse, tringular) x (sparse) = B (sparse) */
-int jmi_linear_solver_sparse_backsolve(const jmi_matrix_sparse_csc_t *L, const jmi_matrix_sparse_csc_t *B, jmi_int_t* nz_pattern, jmi_int_t nz_size, jmi_int_t col, double *work);
+int jmi_linear_solver_sparse_backsolve(const jmi_matrix_sparse_csc_t *L, const jmi_matrix_sparse_csc_t *B, jmi_int_t* nz_pattern, jmi_int_t* nz_pattern_sizes, jmi_int_t nz_size, jmi_int_t col, double *work);
 
 struct jmi_linear_solver_sparse_t {
     jmi_matrix_sparse_csc_t *L;
@@ -83,10 +83,13 @@ struct jmi_linear_solver_sparse_t {
     jmi_matrix_sparse_csc_t *A22;
     jmi_matrix_sparse_csc_t *M1;
     jmi_int_t** nz_patterns;
+    jmi_int_t** nz_pattern_sizes;
+    jmi_int_t** M1_patterns;
     jmi_int_t* nz_sizes;
-	jmi_int_t* nz_offsets;
+    jmi_int_t* M1_sizes;
+    jmi_int_t* nz_offsets;
     double **work_x;
-	jmi_int_t max_threads;
+    jmi_int_t max_threads;
 };
 
 struct jmi_linear_solver_t {
